fix 1: product images should be fully displayed, not stretched or cropped

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,5 +1,5 @@
 .card {
-  width: max-content;
+  width: 390px;
   position: relative;
   padding: 15px;
   transition: $bezier;
@@ -14,10 +14,10 @@
     }
   }
   &__image {
-    width: 100%;
+    height: 300px;
     &-container {
-      max-height: 300px;
-      overflow: hidden;
+      display: flex;
+      justify-content: center;
     }
   }
   &__cart {
